--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -9,8 +9,10 @@
     "async": "^3.2.0",
     "axios": "^0.21.0",
     "json-server": "^0.16.3",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
